src/test/contracts/negative/interpreter_tests/test_run_types2.jsligo
import Test = Test.Next;

const foo = (x:  {b:int}):  {b:int} => {return x};
const bar = Test.Michelson.run(foo, "toto");
